--- a/src/app/layouts/main/main.component.html
+++ b/src/app/layouts/main/main.component.html
@@ -50,7 +50,7 @@
     </div>
   </nz-header>
     <nz-content>
-      <div class="mt-[90px] border-t border-solid border-primary px-1 h-full" [class.hidden]="!isCollapsed"
+      <div class="mt-[90px] px-1 h-full mb-[-100px]" [class.hidden]="!isCollapsed"
         [class.lg:block]="!isCollapsed">
         <router-outlet></router-outlet>
       </div>
