--- a/src/app/features/list-fields/fields-list/fields-list.component.html
+++ b/src/app/features/list-fields/fields-list/fields-list.component.html
@@ -7,13 +7,24 @@
     <div class="w-full mt-7 flex items-start justify-between gap-[40px]">
         <div class="w-[20%]">
             <div class="w-full relative">
-                <input type="text" class="w-full p-2 border outline-none border-gray-300 rounded-md" placeholder="Tìm kiếm sân thể thao">
+                <input 
+                  type="text" 
+                  class="w-full p-2 border outline-none border-gray-300 rounded-md" 
+                  placeholder="Tìm kiếm sân thể thao"
+                  (input)="onSearch($event)">
                 <i class="fa-solid fa-magnifying-glass absolute top-[50%] translate-y-[-50%] right-3"></i>
             </div>
             <div class="w-full border border-gray-300 rounded-md mt-8 py-4 px-3">
                 <div class="italic text-[16px] font-semibold border-b pb-2">Danh sách sân bãi</div>
-                <div (click)="checkFeild(item)"
-                class="w-full flex items-center justify-between border-b text-[16px] py-2 max-h-[200px] overflow-y-auto cursor-pointer hover:text-primary checked:text-primary" *ngFor="let item of listFeilds">
+                <div *ngIf="isLoading" class="py-3 text-center">
+                    <div>Đang tải...</div>
+                </div>
+                <div *ngIf="!isLoading && listFeilds.length === 0" class="py-3 text-center">
+                    <div>Không có loại sân</div>
+                </div>
+                <div *ngFor="let item of listFeilds"
+                  (click)="checkFeild(item)"
+                  class="w-full flex items-center justify-between border-b text-[16px] py-2 cursor-pointer hover:text-primary">
                     <div class="flex items-center justify-start gap-2">
                         <i *ngIf="selectedFieldId === item.id" class="fa-solid fa-hand-point-right text-primary"></i>
                         <div [ngClass]="{'text-primary': selectedFieldId === item.id}" class="italic">{{item.name}}</div>
@@ -24,23 +35,31 @@
         </div>
         <div class="w-[80%]">
             <div class="text-center text-[28px] font-semibold font-[montserrat]">{{nameFeildCheck}}</div>
-            <div class="w-full grid grid-cols-3 grid-rows-2 gap-[30px] mt-8">
-                <div *ngFor="let item of listSanBong" class="flex-shrink-0 pb-2 flex flex-col items-center grid-cols-1 shadow-shadow-timeword rounded-md">
+            <div *ngIf="isLoading" class="w-full flex justify-center my-8">
+                <div class="text-center">Đang tải dữ liệu...</div>
+            </div>
+            <div *ngIf="!isLoading && listSanBong.length === 0" class="w-full flex justify-center my-8">
+                <div class="text-center">Không tìm thấy sân thể thao nào</div>
+            </div>
+            <div *ngIf="!isLoading && listSanBong.length > 0" class="w-full grid grid-cols-3 grid-rows-2 gap-[30px] mt-8">
+                <div *ngFor="let item of listSanBong" class="flex-shrink-0 pb-2 flex flex-col grid-cols-1 shadow-shadow-timeword rounded-md">
                     <div class="w-full h-[200px]">
                         <img class="object-cover w-full h-full rounded-tl-md rounded-tr-md" [src]="item.img"/>
                     </div>
-                    <div class="flex flex-col p-4 gap-2 w-full">
+                    <div class="flex flex-col items-start p-4">
                         <div class="text-[#000] text-[18px] font-semibold">{{ item.name }}</div>
-                        <div class="text-[#000] text-[16px]">{{ item.address }}</div>
-                        <div class="text-[#000] text-[16px]">{{ item.type }}</div>
-                        <div class="text-[#000] text-[16px]">{{ item.time }}</div>
+                        <div class="text-[#7D7D7D] text-[14px]"><i class="fa-solid fa-location-dot"></i> {{ item.address }}</div>
+                        <div class="text-[#000] font-normal text-[15px] mt-3">Thể loại: {{ item.facilityType }}</div>
+                        <div class="text-[#000] font-normal text-[15px] mt-1">Mô tả: {{ item.description }}</div>
                     </div>
-                    <div (click)="viewDetail(item.id)" class="bg-[#DF6951] hover:scale-105 py-2 px-4 text-white cursor-pointer rounded-lg">Chi tiết</div>
+                    <div class="w-full flex justify-center">
+                        <div (click)="viewDetail(item.id)" class="bg-[#DF6951] hover:scale-105 py-2 px-4 text-white cursor-pointer rounded-lg w-[100px] text-center">Chi tiết</div>
+                    </div>
                 </div>
             </div>
             <nz-pagination 
                 [nzPageSize]="pageSize" 
-                [nzTotal]="listSanBong.length" 
+                [nzTotal]="totalItems" 
                 [(nzPageIndex)]="currentPage"
                 (nzPageIndexChange)="onPageChange($event)"
                 class="mt-7 text-right">
